language/move-lang/tests/move_check/liveness/copy_after_move.move
module 0x8675309::M {
    fun t0() {
        let x = 0;
        move x;
        copy x;
    }
}
